# distsystems-labs

./: .gitignore
lab1-processes-vs-threads/: pyproject.toml
lab1-processes-vs-threads/rust/: Cargo.toml
lab1-processes-vs-threads/rust/src/: main.rs
lab1-processes-vs-threads/src/: comparison.ipynb  comparison.py  main.py
lab2-aprendizado-federado/: Lab_2_Aprendizado_Federado.ipynb  README.md  client.py  pyproject.toml  server.py
lab3-chamada-de-procedimento-remoto/: README.md
lab3-chamada-de-procedimento-remoto/ex1/: Makefile  rpcCalc.h  rpcCalc_client.c  rpcCalc_clnt.c  rpcCalc_svc.c
lab3-chamada-de-procedimento-remoto/ex2/: README.md  rpcCalc_client.py  rpcCalc_server.py
lab3-chamada-de-procedimento-remoto/ex3/: grpcCalc_client.py  grpcCalc_pb2_grpc.py  grpcCalc_server.py
lab3-chamada-de-procedimento-remoto/ex4/: client.py
lab3/ex1/: README  rpcCalc.x  rpcCalc_server.c  rpcCalc_xdr.c
lab3/ex3/: grpcCalc.proto  grpcCalc_pb2.py
lab3/ex4/: README.md  client.py  server.py
lab5/: client.py  server.py  stop_local_broker.sh
lab5-comunicação-indireta-pubsub-2/: pyproject.toml  start_local_broker.sh
lab6-eleição-coordenação-distribuída/: ANALYSIS.md  README.md  compose.yml  handler.py  mine.py  node.py  pyproject.toml  transactions.py
lab6-eleição-coordenação-distribuída/src/: handler.py  main.py  mine.py  node.py  server.py  transactions.py
lab7-assinatura-digital/: README.md  pyproject.toml
lab7-assinatura-digital/src/: main.py  transactions.py
trab1/: README.md  client.py  fedlearn_grpc.proto  fedlearn_grpc_binds.py  fedlearn_grpc_pb2.py  fedlearn_grpc_pb2_grpc.py  pyproject.toml  server.py  start_training.sh
trab1-aprendizado-federado/: README.md  client.py  fedlearn_grpc.py  server.py
trab1/proto/: fedlearn_grpc_pb2_grpc.py
trab2-aprendizado-federado/: README.md  client.py  client_aggregator.py  client_trainer.py  compose.yml  guide.txt  serialization.py
