[tool.poetry]
name = "lab1-processes-vs-threads"
version = "0.1.0"
description = ""
authors = ["Henriquelay <37563861+henriquelay@users.noreply.github.com>", "1crin <1crin@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "lab1_processes_vs_threads"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
seaborn = "^0.12.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = {version = "^23.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
