[tool.poetry]
name = "lab2-aprendizado-federado"
version = "0.1.0"
description = ""
authors = ["Henriquelay <37563861+Henriquelay@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "lab2_aprendizado_federado"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
flwr = {version = "1.3.0", extras = ["simulation"]}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
